--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -227,6 +227,7 @@
 \newcommand{\analyticDMPlowerbound}{\solutionbound^{\text{analytic},-}}
 \newcommand{\limitedfluxbound}{Q}
 \newcommand{\antidiffusionbound}{\limitedfluxbound}
+\newcommand{\antidiffusionboundvector}{\mathbf{\limitedfluxbound}}
 \newcommand{\antidiffusionlowerboundss}{\antidiffusionbound^{\textup{ss},-}}
 \newcommand{\antidiffusionupperboundss}{\antidiffusionbound^{\textup{ss},+}}
 \newcommand{\antidiffusionlowerboundee}{\antidiffusionbound^{\textup{ee},-}}
@@ -242,9 +243,12 @@
 \newcommand{\correctionfluxij}{\correctionfluxentry_{i,j}}
 \newcommand{\correctionfluxji}{\correctionfluxentry_{j,i}}
 \newcommand{\correctionfluxmatrix}{\mathbf{\MakeUppercase{\correctionfluxletter}}}
+\newcommand{\correctionfluxremainder}{\Delta\MakeUppercase{\correctionfluxletter}}
 \newcommand{\correctionfluxmatrixremainder}{\Delta\correctionfluxmatrix}
 \newcommand{\limitedcorrectionfluxmatrixremainder}
   {\bar{\correctionfluxmatrixremainder}}
+\newcommand{\limitedcorrectionfluxletter}{\bar{\correctionfluxletter}}
+\newcommand{\cumulativecorrectionfluxletter}{\bar{\correctionfluxletter}}
 \newcommand{\cumulativecorrectionfluxvector}{\bar{\correctionfluxvector}}
 \newcommand{\cumulativecorrectionfluxvectorchange}
   {\Delta\cumulativecorrectionfluxvector}
