changes to diagram

--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -243,10 +243,12 @@
 \newcommand{\correctionfluxij}{\correctionfluxentry_{i,j}}
 \newcommand{\correctionfluxji}{\correctionfluxentry_{j,i}}
 \newcommand{\correctionfluxmatrix}{\mathbf{\MakeUppercase{\correctionfluxletter}}}
+% remainder
 \newcommand{\correctionfluxremainder}{\Delta\MakeUppercase{\correctionfluxletter}}
 \newcommand{\correctionfluxmatrixremainder}{\Delta\correctionfluxmatrix}
 \newcommand{\limitedcorrectionfluxmatrixremainder}
   {\bar{\correctionfluxmatrixremainder}}
+
 \newcommand{\limitedcorrectionfluxletter}{\bar{\correctionfluxletter}}
 \newcommand{\cumulativecorrectionfluxletter}{\bar{\correctionfluxletter}}
 \newcommand{\cumulativecorrectionfluxvector}{\bar{\correctionfluxvector}}
