--- a/doc/diagrams/multipass_limiter.tex
+++ b/doc/diagrams/multipass_limiter.tex
@@ -15,39 +15,54 @@
     rectangle,
     minimum width={10}}]
 
+  % main nodes
   \coordinate (start) at (0,\yone);
   \node[draw] (dP) at ($(start.center)+(\nodedistance,0)$)
-    {$\ell \gets 0$\\
-    $\correctionfluxmatrixremainder^{(\ell)} \gets \correctionfluxmatrix$};
+    {$\ell \gets 1$\\
+    $\correctionfluxmatrixremainder^{(0)} \gets \correctionfluxmatrix$\\
+    $\cumulativecorrectionfluxvector^{(0)} \gets \mathbf{0}$};
   \node[mybox] (lim)  at ($(dP.center)+(1.3*\nodedistance,0)$) {Limiter};
   \node[draw, diamond] (if)  at ($(lim.center)+(1.1*\nodedistance,0)$)
-    {$\limitedcorrectionfluxletter^{\text{tot},(\ell)} = 0$};
+    {$\Delta\limitedcorrectionfluxletter^{\text{tot},(\ell)} = 0$};
   \coordinate (end)     at ($(if.center)+(1.3*\nodedistance,0)$);
 
+  % algorithm input
   \node (Ptext) at ($(start.center)+(0.25*\nodedistance,\textpad)$)
-    {$\{\antidiffusionbound_i^\pm\}$};
+    {$\antidiffusionboundvector^\pm$};
   \node at ($(Ptext.center)+(0,\textdistance)$)
-    {$\{\correctionfluxij\}$};
+    {$\correctionfluxmatrix$};
 
+  % limiter input
   \node (dPtext) at ($(dP.center)+(0.75*\nodedistance,\textpad)$)
-    {$\{\antidiffusionbound_i^\pm\}$};
-  \node at ($(dPtext.center)+(0,\textdistance)$)
-    {$\{\correctionfluxremainder^{(\ell)}\ij\}$};
+    {$\antidiffusionboundvector^\pm$};
+  \node (dPtext2) at ($(dPtext.center)+(0,\textdistance)$)
+    {$\correctionfluxmatrixremainder^{(\ell-1)}$};
+  \node at ($(dPtext2.center)+(0,\textdistance)$)
+    {$\cumulativecorrectionfluxvector^{(\ell-1)}$};
 
+  % limiter output
   \node at ($(lim.center)+(0.45*\nodedistance,\textpad)$)
-    {$\{\limiterletter\ij^{(\ell)}\}$};
-  \node at ($(if.center)+(\nodedistance,\textpad)$) {$\{\limiterletter\ij\}$};
+    {$\limitermatrix^{(\ell)}$};
+
+  % algorithm output
+  \node at ($(if.center)+(\nodedistance,\textpad)$) {$\limitermatrix$};
+
+  % true/false
   \node at ($(if.center)+(0.55*\nodedistance,\textpad)$) {true};
   \node at ($(if.center)+(2*\textpad,-0.5*\nodedistance)$) {false};
-  %\node at ($(if.center)+(0.75*\nodedistance,\textpad)$)
-  %  {$\{\limiterletter\ij\}$};
+
+  % reentry coordinates
   \coordinate (reentry) at ($(dP.center)+(0.5*\nodedistance,0)$);
   \coordinate (belowif) at ($(if.center)+(0,-0.75*\nodedistance)$);
+
+  % dP update
   \node[draw] (dPupdate) at ($(reentry.center)+(0,-0.75*\nodedistance)$)
-    {$\correctionfluxremainder\ij^{(\ell+1)} \gets
-      \correctionfluxremainder\ij^{(\ell)}
-      - \limiterletter\ij^{(\ell)}\correctionfluxremainder\ij^{(\ell)}$\\
+    {$\correctionfluxremainder\ij^{(\ell)} \gets
+      \correctionfluxremainder\ij^{(\ell-1)}
+      - \limiterletter\ij^{(\ell)}\correctionfluxremainder\ij^{(\ell-1)}$\\
     $\ell \gets \ell+1$};
+
+  % arrows
   \draw[->] (start)     -- (dP);
   \draw[->] (dP)        -- (lim);
   \draw[->] (lim)       -- (if);
@@ -55,11 +70,12 @@
   \draw[->] (if)        -- (belowif) -- (dPupdate);
   \draw[->] (dPupdate)  -- (reentry);
 
+  % dashed box
   \draw[style=dashed] ($(start.center)+(0.5*\nodedistance,-1*\nodedistance)$)
-    rectangle ($(if.center)+(0.75*\nodedistance,0.5*\nodedistance)$);
+    rectangle ($(if.center)+(0.75*\nodedistance,0.63*\nodedistance)$);
 \end{tikzpicture}
 
 \[
-  \limitedcorrectionfluxletter^{\text{tot},(\ell)} \gets \sum\limits_{i,j}
-    \left|\limiterletter\ij^{(\ell)}\correctionfluxremainder\ij^{(\ell)}\right|
+  \Delta\limitedcorrectionfluxletter^{\text{tot},(\ell)} \gets \sum\limits_{i,j}
+    \left|\limiterletter\ij^{(\ell)}\correctionfluxremainder\ij^{(\ell-1)}\right|
 \]
